fix: sys-tabs style error when collapse sider

--- a/src/css/frame.less
+++ b/src/css/frame.less
@@ -14,6 +14,11 @@
     .app-logo{
       padding-left: 5px;
     }
+    .h-layout-header-fixed {
+      .sys-tabs-vue {
+        left: @layout-sider-collapse-width;
+      }
+    }
   }
 
   .h-layout-header-fixed {
